--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,12 +20,10 @@ build:
     # Override the create_environment step (undocumented feature) to create
     # a single environment instead of multiple environments.
     create_environment:
-      # Pin micromamba
-      - /bin/bash --login -c "micromamba self-update --version 2.0.7"
-      # Create a single environment that includes all dependencies
-      - /bin/bash --login -c "micromamba create -n jupytergis -c conda-forge nodejs hatch pip python=3.13"
-      - /bin/bash --login -c "micromamba run -n jupytergis pip install 'jupyterlab==4.3' 'datamodel-code-generator>=0.23.0'"
-      - /bin/bash --login -c "micromamba env update -n jupytergis -f docs/environment-docs.yml"
+    # Pin micromamba
+    - /bin/bash --login -c "micromamba self-update --version 2.0.7"
+    # Create the environment using the updated environment-docs.yml
+    - /bin/bash --login -c "micromamba env create -n jupytergis -f docs/environment-docs.yml"
 
     # Override the install step to do nothing - we already created the env
     install:
