--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -4,9 +4,9 @@ channels:
   - nodefaults
 dependencies:
   - python=3.12
-  - pip # Needed to install jupytergis wheels in RTD build
-
-  # Build docs & JupyterLite
+  - pip
+  - nodejs
+  - hatch
   - jupyterlite-core
   - jupyterlite-xeus>=3.1.3,<4
   - jupyterlite-sphinx
@@ -18,3 +18,6 @@ dependencies:
   - sphinx-togglebutton
   - myst-parser
   - xeus-python # TODO: Do we need this?
+  - pip:
+      - jupyterlab==4.3
+      - datamodel-code-generator>=0.23.0
