Add documentation build script, fix build warning, and update docs on building docs (#584)

--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -4,7 +4,6 @@ channels:
   - nodefaults
 dependencies:
   - python=3.12
-  - pip # Needed to install jupytergis wheels in RTD build
 
   # Build docs & JupyterLite
   - jupyterlite-core
@@ -18,3 +17,11 @@ dependencies:
   - sphinx-togglebutton
   - myst-parser
   - xeus-python # TODO: Do we need this?
+
+  - pip
+  - pip:
+      # Install JupyterGIS so we can autodoc.
+      # IMPORTANT: You must do `jlpm build` at the root of the repo before this can work.
+      # See: https://github.com/geojupyter/jupytergis/issues/585
+      - ../python/jupytergis_core
+      - ../python/jupytergis_lab
