--- a/requirements-build.txt
+++ b/requirements-build.txt
@@ -2,6 +2,7 @@
 datamodel-code-generator>=0.23.0
 hatchling>=1.5.0,<2
 jupyter-collaboration>=3,<4
+jupyter-docprovider>=1,<2
 jupyterlab>=4.3,<5
 mercantile>=1.2
 pillow>=10
