Add settings to core

--- a/python/jupytergis_core/package.json
+++ b/python/jupytergis_core/package.json
@@ -91,6 +91,7 @@
     "access": "public"
   },
   "jupyterlab": {
+    "schemaDir": "schema",
     "discovery": {
       "server": {
         "managers": [
