--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -13,7 +13,7 @@ dependencies:
   - pydantic>=2,<3
   - pip:
       - yjs-widgets>=0.4,<0.5
-      - my-jupyter-shared-drive
+      - my-jupyter-shared-drive<0.2.0
       - ../python/jupytergis_lab
       - ../python/jupytergis_core
       - ../python/jupytergis_lite
