--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -25,3 +25,4 @@ dependencies:
       # See: https://github.com/geojupyter/jupytergis/issues/585
       - ../python/jupytergis_core
       - ../python/jupytergis_lab
+      - ../python/jupytergis
