--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -11,6 +11,7 @@ dependencies:
   - ypywidgets>=0.9.6,<0.10.0
   - comm>=0.1.2,<0.2.0
   - pydantic>=2,<3
+  - sidecar
   - pip:
       - yjs-widgets>=0.4,<0.5
       - my-jupyter-shared-drive<0.2.0
