get settings in tools.ts

--- a/python/jupytergis_core/schema/jupytergis-settings.json
+++ b/python/jupytergis_core/schema/jupytergis-settings.json
@@ -7,7 +7,7 @@
       "type": "string",
       "title": "Proxy URL",
       "description": "The proxy URL to use for external requests.",
-      "default": "https://corsproxy.io/"
+      "default": "https://corsproxy.io"
     }
   }
 }
