--- a/python/jupytergis_core/package.json
+++ b/python/jupytergis_core/package.json
@@ -15,7 +15,8 @@
   "author": "JupyterGIS contributors",
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
+    "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
+    "schema/**/*.{json,js,ts}"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -91,6 +92,7 @@
     "access": "public"
   },
   "jupyterlab": {
+    "schemaDir": "schema",
     "discovery": {
       "server": {
         "managers": [
