--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -63,6 +63,7 @@
     "@lumino/widgets": "^2.0.0",
     "@mapbox/vector-tile": "^2.0.3",
     "@naisutech/react-tree": "^3.0.1",
+    "@ngageoint/geopackage": "^4.2.6",
     "@rjsf/core": "^4.2.0",
     "@rjsf/validator-ajv8": "^5.23.1",
     "ajv": "^8.14.0",
