--- a/python/jupytergis_core/package.json
+++ b/python/jupytergis_core/package.json
@@ -72,11 +72,14 @@
     "@types/json-schema": "^7.0.11",
     "@types/react": "^18.0.26",
     "@types/react-addons-linked-state-mixin": "^0.14.22",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.1",
     "mkdirp": "^1.0.3",
     "npm-run-all": "^4.1.5",
+    "process": "^0.11.10",
     "rimraf": "^3.0.2",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "typescript": "^5",
     "webpack": "^5.76.3",
@@ -103,6 +106,7 @@
     },
     "extension": true,
     "outputDir": "jupytergis_core/labextension",
+    "webpackConfig": "webpack.config.js",
     "sharedPackages": {
       "@jupytergis/base": {
         "singleton": true,
