--- a/python/jupytergis_core/tsconfig.json
+++ b/python/jupytergis_core/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../../tsconfigbase.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "typeRoots": ["src/@types", "../../node_modules/@types"]
   },
   "include": ["src/**/*", "src/schema/*.json", "src/_interface/*.json"]
 }
