--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "rimraf": "^3.0.2",
     "typescript": "^5",
     "webpack": "^5.76.3"
+  },
+  "dependencies": {
+    "ol-stac": "^1.0.0-rc.10"
   }
 }
