--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -8,6 +8,7 @@
     "src/**/*",
     "src/schema/*.json",
     "src/_interface/*.json",
-    "src/*.json"
+    "src/*.json",
+    "src/types/*"
   ]
 }
