Set up side panel for stac browser

--- a/tsconfigbase.json
+++ b/tsconfigbase.json
@@ -19,6 +19,7 @@
     "target": "es2017",
     "types": ["node", "webpack-env"],
     "skipLibCheck": true,
-    "lib": ["ES2019", "WebWorker", "DOM"]
+    "lib": ["ES2019", "WebWorker", "DOM"],
+    "declarationMap": true
   }
 }
