--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -2,7 +2,11 @@
   "extends": "../../tsconfigbase.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./*"]
+    }
   },
   "include": [
     "src/**/*",
