Support absolute paths with typescript-transform-paths and ts-patch
Requires using `tspc` as compiler instead of `tsc`. Would be better to
switch to the "use NX" approach of typescript-transform-paths, but I
wasn't able to get that to work.

Co-authored-by: martinRenou <martin.renou@gmail.com>

--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -6,7 +6,11 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "plugins": [
+       { "transform": "typescript-transform-paths" },
+       { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": [
     "src/**/*",
