--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -27,15 +27,15 @@
     "url": "https://github.com/geojupyter/jupytergis.git"
   },
   "scripts": {
-    "build": "tsc -b && jlpm run cp:gdal",
+    "build": "tspc -b && jlpm run cp:gdal",
     "build:gallery": "python rasterlayer_gallery_generator.py",
     "cp:gdal": "cp ../../node_modules/gdal3.js/dist/package/gdal3WebAssembly.data lib && cp ../../node_modules/gdal3.js/dist/package/gdal3WebAssembly.wasm lib",
     "build:prod": "jlpm run clean && jlpm run build",
-    "build:dev": "tsc -b && jlpm run cp:gdal",
+    "build:dev": "tspc -b && jlpm run cp:gdal",
     "clean": "rimraf tsconfig.tsbuildinfo",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:all": "jlpm run clean:lib",
-    "watch": "tsc -w"
+    "watch": "tspc -w"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -95,7 +95,9 @@
     "@types/shpjs": "^3.4.7",
     "@types/uuid": "^10.0.0",
     "rimraf": "^3.0.2",
-    "typescript": "^5"
+    "ts-patch": "^3.3.0",
+    "typescript": "^5",
+    "typescript-transform-paths": "^3.5.5"
   },
   "sideEffects": [
     "style/*.css",
