--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -2,7 +2,14 @@
   "extends": "../../tsconfigbase.json",
   "compilerOptions": {
     "outDir": "lib",
-    "rootDir": "src"
+    "rootDir": "src",
+    "paths": {
+      "@/*": ["./*"]
+    },
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": [
     "src/**/*",
