--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -64,22 +64,31 @@
     "@lumino/widgets": "^2.0.0",
     "@mapbox/vector-tile": "^2.0.3",
     "@naisutech/react-tree": "^3.0.1",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@rjsf/core": "^4.2.0",
     "@rjsf/validator-ajv8": "^5.23.1",
     "ajv": "^8.14.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "colormap": "^2.3.2",
     "d3-color": "^3.1.0",
     "date-fns": "^4.1.0",
     "gdal3.js": "^2.8.1",
     "geojson-vt": "^4.0.2",
     "geotiff": "^2.1.3",
+    "lucide-react": "^0.513.0",
     "ol": "^10.1.0",
     "ol-pmtiles": "^0.5.0",
+    "ol-stac": "^1.0.0-rc.10",
     "pbf": "^4.0.1",
     "pmtiles": "^3.0.7",
     "proj4": "^2.14.0",
     "proj4-list": "^1.0.4",
     "react": "^18.0.1",
+    "react-day-picker": "8.10.1",
     "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
     "three": "^0.135.0",
