--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ untitled*
 
 # GeoJSON schema
 packages/schema/src/schema/geojson.json
+
+# Automatically generated file for processing
+
+packages/schema/src/processing/_generated/*
