Add a STAC browser

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ packages/schema/src/schema/geojson.json
 # Automatically generated file for processing
 
 packages/schema/src/processing/_generated/*
+
+# Local example files
+examples/local_examples/*
