--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -63,7 +63,6 @@
     "@lumino/widgets": "^2.0.0",
     "@mapbox/vector-tile": "^2.0.3",
     "@naisutech/react-tree": "^3.0.1",
-    "@ngageoint/geopackage": "^4.2.6",
     "@rjsf/core": "^4.2.0",
     "@rjsf/validator-ajv8": "^5.23.1",
     "ajv": "^8.14.0",
@@ -74,6 +73,7 @@
     "geojson-vt": "^4.0.2",
     "geotiff": "^2.1.3",
     "ol": "^10.1.0",
+    "ol-load-geopackage": "^1.0.3",
     "ol-pmtiles": "^0.5.0",
     "pbf": "^4.0.1",
     "pmtiles": "^3.0.7",
