--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -72,7 +72,9 @@
     "date-fns": "^4.1.0",
     "gdal3.js": "^2.8.1",
     "geojson-vt": "^4.0.2",
+    "geoparquet": "^0.3.0",
     "geotiff": "^2.1.3",
+    "hyparquet-compressors": "^1.1.1",
     "ol": "^10.1.0",
     "ol-pmtiles": "^0.5.0",
     "pbf": "^4.0.1",
