--- a/docs/environment-docs.yml
+++ b/docs/environment-docs.yml
@@ -7,7 +7,7 @@ dependencies:
 
   # Build docs & JupyterLite
   - jupyterlite-core
-  - jupyterlite-xeus>=3.1.3,<4
+  - jupyterlite-xeus
   - jupyterlite-sphinx
   - sphinx
   - sphinx-tabs
