--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -85,7 +85,7 @@
     "ol-stac": "^1.0.0-rc.10",
     "pbf": "^4.0.1",
     "pmtiles": "^3.0.7",
-    "proj4": "^2.14.0",
+    "proj4": "^2.14.0 <2.19.0",
     "proj4-list": "^1.0.4",
     "react": "^18.0.1",
     "react-day-picker": "8.10.1",
@@ -100,7 +100,7 @@
     "@types/colormap": "^2.3.4",
     "@types/d3-color": "^3.1.0",
     "@types/node": "^18.15.11",
-    "@types/proj4": "^2.5.5",
+    "@types/proj4": "^2.5.6",
     "@types/shpjs": "^3.4.7",
     "@types/uuid": "^10.0.0",
     "rimraf": "^3.0.2",
