Re-pin to ^2.19.3, which includes fix
https://github.com/proj4js/proj4js/pull/513

--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -85,7 +85,7 @@
     "ol-stac": "^1.0.0-rc.10",
     "pbf": "^4.0.1",
     "pmtiles": "^3.0.7",
-    "proj4": "^2.14.0 <2.19.0",
+    "proj4": "^2.19.3",
     "proj4-list": "^1.0.4",
     "react": "^18.0.1",
     "react-day-picker": "8.10.1",
