--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -64,6 +64,8 @@
     "@lumino/widgets": "^2.0.0",
     "@mapbox/vector-tile": "^2.0.3",
     "@naisutech/react-tree": "^3.0.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
@@ -88,7 +90,7 @@
     "proj4": "^2.19.3",
     "proj4-list": "^1.0.4",
     "react": "^18.0.1",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.7.0",
     "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
     "three": "^0.135.0",
