Fix copying sql wasm

--- a/python/jupytergis_core/package.json
+++ b/python/jupytergis_core/package.json
@@ -28,8 +28,8 @@
   "scripts": {
     "build": "jlpm build:lib && jlpm build:labextension:dev",
     "build:prod": "jlpm clean && jlpm build:lib:prod && jlpm build:labextension",
-    "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build:labextension": "jupyter labextension build . && jlpm cp:sqlwasm",
+    "build:labextension:dev": "jupyter labextension build --development True . && jlpm cp:sqlwasm",
     "build:lib": "tsc --sourceMap",
     "build:lib:prod": "tsc",
     "build:dev": "jlpm run build",
@@ -43,8 +43,7 @@
     "install:extension": "jlpm build",
     "lint": "jlpm stylelint && jlpm prettier && jlpm eslint",
     "lint:check": "jlpm stylelint:check && jlpm prettier:check && jlpm eslint:check",
-    "prebuild:labextension": "cp ../../node_modules/sql.js/dist/sql-wasm.wasm static/",
-    "prebuild:build:labextension:dev": "cp ../../node_modules/sql.js/dist/sql-wasm.wasm static/",
+    "cp:sqlwasm": "cp ../../node_modules/sql.js/dist/sql-wasm.wasm jupytergis_core/labextension/static",
     "prettier": "jlpm prettier:base --write",
     "prettier:base": "prettier \"**/*{.ts,.tsx,.js,.jsx,.css,.json,.md}\"",
     "prettier:check": "jlpm prettier:base --check",
