Add GeoParquet support (#727)
* Add Geoparquet source from URL

* Add Geoparquet source from file

* Add Geoparquet source to Python API

* Add Geoparquet source from URL

* Add Geoparquet source from file

* Add Geoparquet source to Python API

* Update yarn.lock

* Add parquet file

* Move dependencies to to packages/base

* Format files

* Fix icon

* Add example project

---------

Co-authored-by: martinRenou <martin.renou@gmail.com>

--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -15,6 +15,7 @@
     "src/**/*",
     "src/schema/*.json",
     "src/_interface/*.json",
-    "src/*.json"
+    "src/*.json",
+    "src/types/*"
   ]
 }
