--- a/python/jupytergis/pyproject.toml
+++ b/python/jupytergis/pyproject.toml
@@ -22,10 +22,10 @@ dependencies = [
   "jupytergis_core==0.9.2",
   "jupytergis_lab==0.9.2",
   "jupytergis_qgis==0.9.2",
-  "jupyter-collaboration>=3,<4",
+  "jupyter-collaboration>=3",
   "jupyter-docprovider>=1,<2",
   "jupyter-server-ydoc>=1,<2",
-  "jupyter-collaboration-ui>=1,<2",
+  "jupyter-collaboration-ui>=1",
   "jupyterlab>=4.3,<5",
 ]
 dynamic = ["version"]
