--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -92,6 +92,7 @@
     "proj4": "2.19.3",
     "proj4-list": "1.0.4",
     "react": "^18.0.1",
+    "react-data-grid": "^7.0.0-beta.57",
     "react-day-picker": "^9.7.0",
     "shpjs": "^6.1.0",
     "styled-components": "^5.3.6",
