Add prompt to indicate which steps are frustrating or rewarding

--- a/.github/ISSUE_TEMPLATE/0-user-story.yml
+++ b/.github/ISSUE_TEMPLATE/0-user-story.yml
@@ -22,7 +22,8 @@ body:
         Please write as if you're describing what a non-GIS-professional
         looking over your shoulder would see.
 
-        Please estimate the time consumed by each step.
+        Please estimate the time consumed by each step, and let us know about
+        any steps that are particularly frustrating or rewarding.
 
         **We would especially like to know about where you experienced
         [mental context switches](https://en.wikipedia.org/wiki/Human_multitasking)
