--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -16,6 +16,7 @@
     "src/schema/*.json",
     "src/_interface/*.json",
     "src/*.json",
-    "src/types/*"
+    "src/types/*",
+    "src/**/*.json"
   ]
 }
