Avoid breaking change in react-fontawesome 3.0.0
3.0.0 was released today, and now check-release CI is failing.

```
Cannot find module '@fortawesome/react-fontawesome' or its corresponding type declarations.
```

This change should get things working again.

--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-fontawesome": "latest",
+    "@fortawesome/react-fontawesome": ">=0.2.6 <3.0.0",
     "@jupyter/collaboration": "^3.1.0",
     "@jupyter/react-components": "^0.16.6",
     "@jupyter/ydoc": "^2.0.0 || ^3.0.0",
