update cmocean colors format

--- a/packages/base/tsconfig.json
+++ b/packages/base/tsconfig.json
@@ -17,6 +17,6 @@
     "src/_interface/*.json",
     "src/*.json",
     "src/types/*",
-    "src/**/*.json"
+    "src/dialogs/symbology/components/color_ramp/cmocean.json"
   ]
 }
