Copy nyc data folder for Lite build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -287,7 +287,8 @@ jobs:
           set -eux
           mkdir -p content/data
           cp ../examples/*.jGIS ../examples/*.ipynb ../examples/*.qgz ./content
-          cp ../examples/data/*.geojson ../examples/data/*.tif ../examples/data/*.zip ../examples/data/*.gif ./content/data
+          cp ../examples/data/*.geojson ../examples/data/*.tif ../examples/data/*.gif ./content/data
+          cp -R ../examples/data/nyc ./content/data/.
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload Lite artifacts
