Copy examples excluding unwanted content instead of enumerating all wanted content

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -286,9 +286,8 @@ jobs:
         run: |
           set -eux
           mkdir -p content/data
-          cp ../examples/*.jGIS ../examples/*.ipynb ../examples/*.qgz ./content
-          cp ../examples/data/*.geojson ../examples/data/*.tif ../examples/data/*.gif ./content/data
-          cp -R ../examples/data/nyc ./content/data/.
+          cp -R ../examples ./content
+          find ./content -type d -name ".ipynb_checkpoints" -exec rm -rf {} +
           jupyter lite build --contents content --output-dir dist
 
       - name: Upload Lite artifacts
