Introduce settings to optionally disable some features (filtering/annotations etc) (#898)
* Toggle Visibility of Panels and Tabs

* cleanup

* use model's settingschanged

* ready

* lint

* remove flags

* don't show if all tabs are disabled

* remove toolbar menu for now

* disable identify command if identify is disabled in settings

* refactor settings change handling to emit specific keys when settings are updated

* Bring back spacer + small cleanup

* Fix notebook renderer

* Fix missing settings registry for notebook renderer

* Linter

---------

Co-authored-by: martinRenou <martin.renou@gmail.com>

--- a/python/jupytergis_core/schema/jupytergis-settings.json
+++ b/python/jupytergis_core/schema/jupytergis-settings.json
@@ -8,6 +8,41 @@
       "title": "Proxy URL",
       "description": "The proxy URL to use for external requests.",
       "default": "https://corsproxy.io"
+    },
+    "leftPanelDisabled": {
+      "type": "boolean",
+      "title": "Disable Left Panel",
+      "default": false
+    },
+    "stacBrowserDisabled": {
+      "type": "boolean",
+      "title": "Disable STAC Browser",
+      "default": false
+    },
+    "filtersDisabled": {
+      "type": "boolean",
+      "title": "Disable Filters",
+      "default": false
+    },
+    "annotationsDisabled": {
+      "type": "boolean",
+      "title": "Disable Annotations",
+      "default": false
+    },
+    "identifyDisabled": {
+      "type": "boolean",
+      "title": "Disable Identify Features",
+      "default": false
+    },
+    "objectPropertiesDisabled": {
+      "type": "boolean",
+      "title": "Disable Object Properties",
+      "default": false
+    },
+    "rightPanelDisabled": {
+      "type": "boolean",
+      "title": "Disable Right Panel",
+      "default": false
     }
   }
 }
